--- a/examples/generating_mochada_themes.ipynb
+++ b/examples/generating_mochada_themes.ipynb
@@ -165,7 +165,7 @@
    "source": [
     "Now we read theme template, which was created manually and is based on the colours in the [current working agreement](http://characterisation.eu/publications-output/)\n",
     "\n",
-    "You can inspect this file in a text editor to see it's structure. There are also some comment lines in the file giving further explanations."
+    "You can inspect this file in a text editor to see its structure. There are also some comment lines in the file giving further explanations."
    ]
   },
   {
@@ -393,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
