--- a/examples/make_CHADA_tables_from_json_or_yaml.ipynb
+++ b/examples/make_CHADA_tables_from_json_or_yaml.ipynb
@@ -176,7 +176,11 @@
   {
    "cell_type": "markdown",
    "id": "d789d1d5-10d8-496d-9964-e50b1a4afb8a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "<br>\n",
     "\n",
