--- a/examples/generating_mochada_themes.ipynb
+++ b/examples/generating_mochada_themes.ipynb
@@ -34,8 +34,8 @@
    "source": [
     "import pathlib\n",
     "\n",
-    "import numpy as np\n",
-    "import matplotlib as mpl"
+    "import matplotlib as mpl\n",
+    "import numpy as np"
    ]
   },
   {
@@ -114,9 +114,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colormaps = ['viridis', 'plasma', 'cividis', 'PiYG', 'RdBu',\n",
-    "             'coolwarm', 'bwr', 'seismic', 'Set1', 'Set2',\n",
-    "             'jet', 'rainbow']"
+    "colormaps = [\n",
+    "    \"viridis\",\n",
+    "    \"plasma\",\n",
+    "    \"cividis\",\n",
+    "    \"PiYG\",\n",
+    "    \"RdBu\",\n",
+    "    \"coolwarm\",\n",
+    "    \"bwr\",\n",
+    "    \"seismic\",\n",
+    "    \"Set1\",\n",
+    "    \"Set2\",\n",
+    "    \"jet\",\n",
+    "    \"rainbow\",\n",
+    "]"
    ]
   },
   {
@@ -139,12 +150,14 @@
     "for cm in colormaps:\n",
     "    cm_c = mpl.colormaps[cm]\n",
     "    theme_colors[cm] = [mpl.colors.to_hex(cm_c(i)) for i in np.linspace(0.0, 1.0, 4)]\n",
-    "    theme_colors[cm + \"_5\"] = [mpl.colors.to_hex(cm_c(i)) for i in np.linspace(0.0, 1.0, 5)]\n",
+    "    theme_colors[cm + \"_5\"] = [\n",
+    "        mpl.colors.to_hex(cm_c(i)) for i in np.linspace(0.0, 1.0, 5)\n",
+    "    ]\n",
     "\n",
     "# there are five different stereotypes, so for the themes with four colors\n",
     "# we need to repeat the last color once\n",
     "for k, v in theme_colors.items():\n",
-    "    if not k[-2:] == \"_5\":\n",
+    "    if k[-2:] != \"_5\":\n",
     "        v.append(v[-1])"
    ]
   },
@@ -175,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(pathlib.Path(\"../themes/puml-theme-MOCHADA-CWA.puml\"), \"r\") as f:\n",
+    "with open(pathlib.Path(\"../themes/puml-theme-MOCHADA-CWA.puml\")) as f:\n",
     "    d = f.readlines()"
    ]
   },
@@ -214,8 +227,10 @@
    "outputs": [],
    "source": [
     "end_5 = list(end)\n",
-    "end_5.remove('  LineColor $FINAL_DATA_LINECOLOR\\n')\n",
-    "end_5.remove('  LineThickness $FINAL_DATA_LINETHICKNESS\\n',)"
+    "end_5.remove(\"  LineColor $FINAL_DATA_LINECOLOR\\n\")\n",
+    "end_5.remove(\n",
+    "    \"  LineThickness $FINAL_DATA_LINETHICKNESS\\n\",\n",
+    ")"
    ]
   },
   {
@@ -243,22 +258,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h4 = [\"''\\n\",\n",
-    "      \"'' Theme for MODA and CHADA diagrams, based on four colors from the plasma\\n\",\n",
-    "      \"'' colormap in matplotlib.\\n\",\n",
-    "      \"'' The colormap was evaluated at 0, 0.333, 0.667 and 1 to obtain the colours.\\n\",\n",
-    "      \"''\\n\"]\n",
+    "h4 = [\n",
+    "    \"''\\n\",\n",
+    "    \"'' Theme for MODA and CHADA diagrams, based on four colors from the plasma\\n\",\n",
+    "    \"'' colormap in matplotlib.\\n\",\n",
+    "    \"'' The colormap was evaluated at 0, 0.333, 0.667 and 1 to obtain the colours.\\n\",\n",
+    "    \"''\\n\",\n",
+    "]\n",
     "\n",
-    "h5 = [\"''\\n\",\n",
-    "      \"'' Theme for MODA and CHADA diagrams, based on five colors from the plasma\\n\",\n",
-    "      \"'' colormap in matplotlib.\\n\",\n",
-    "      \"'' The colormap was evaluated at 0, 0.25, 0.5, 0.75 and 1 to obtain the colours.\\n\",\n",
-    "      \"''\\n\"]\n",
+    "h5 = [\n",
+    "    \"''\\n\",\n",
+    "    \"'' Theme for MODA and CHADA diagrams, based on five colors from the plasma\\n\",\n",
+    "    \"'' colormap in matplotlib.\\n\",\n",
+    "    \"'' The colormap was evaluated at 0, 0.25, 0.5, 0.75 and 1 to obtain the colours.\\n\",\n",
+    "    \"''\\n\",\n",
+    "]\n",
     "\n",
-    "hpu = [\"'' This is a perceptually uniform colormap which does not contain\\n\",\n",
-    "       \"'' both red and green colours and should therefore be suitable for\\n\",\n",
-    "       \"'' people who have difficulty distinguishing those colours\\n\",\n",
-    "       \"''\\n\"]"
+    "hpu = [\n",
+    "    \"'' This is a perceptually uniform colormap which does not contain\\n\",\n",
+    "    \"'' both red and green colours and should therefore be suitable for\\n\",\n",
+    "    \"'' people who have difficulty distinguishing those colours\\n\",\n",
+    "    \"''\\n\",\n",
+    "]"
    ]
   },
   {
@@ -276,31 +297,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "font_colors = {'viridis': [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
-    "               'viridis_5': [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
-    "               'plasma': [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
-    "               'plasma_5': [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
-    "               'cividis': [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
-    "               'cividis_5': [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
-    "               'PiYG': [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
-    "               'PiYG_5': [\"White\", \"Black\", \"Black\", \"Black\", \"White\"],\n",
-    "               'RdBu': [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
-    "               'RdBu_5': [\"White\", \"Black\", \"Black\", \"Black\", \"White\"],\n",
-    "               'coolwarm': [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
-    "               'coolwarm_5': [\"White\", \"Black\", \"Black\", \"Black\", \"White\"],\n",
-    "               'bwr': [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
-    "               'bwr_5': [\"White\", \"Black\", \"Black\", \"Black\", \"White\"],\n",
-    "               'seismic': [\"White\", \"White\", \"Black\", \"White\", \"White\"],\n",
-    "               'seismic_5': [\"White\", \"White\", \"Black\", \"Black\", \"White\"],\n",
-    "               'Set1': [\"White\", \"White\", \"White\", \"White\", \"White\"],\n",
-    "               'Set1_5': [\"White\", \"White\", \"White\", \"White\", \"White\"],\n",
-    "               'Set2': [\"White\", \"White\", \"White\", \"White\", \"White\"],\n",
-    "               'Set2_5': [\"White\", \"White\", \"White\", \"White\", \"White\"],\n",
-    "               'jet': [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
-    "               'jet_5': [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
-    "               'rainbow': [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
-    "               'rainbow_5': [\"White\", \"Black\", \"Black\", \"White\", \"White\"]\n",
-    "               }"
+    "font_colors = {\n",
+    "    \"viridis\": [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
+    "    \"viridis_5\": [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
+    "    \"plasma\": [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
+    "    \"plasma_5\": [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
+    "    \"cividis\": [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
+    "    \"cividis_5\": [\"White\", \"White\", \"White\", \"Black\", \"Black\"],\n",
+    "    \"PiYG\": [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
+    "    \"PiYG_5\": [\"White\", \"Black\", \"Black\", \"Black\", \"White\"],\n",
+    "    \"RdBu\": [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
+    "    \"RdBu_5\": [\"White\", \"Black\", \"Black\", \"Black\", \"White\"],\n",
+    "    \"coolwarm\": [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
+    "    \"coolwarm_5\": [\"White\", \"Black\", \"Black\", \"Black\", \"White\"],\n",
+    "    \"bwr\": [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
+    "    \"bwr_5\": [\"White\", \"Black\", \"Black\", \"Black\", \"White\"],\n",
+    "    \"seismic\": [\"White\", \"White\", \"Black\", \"White\", \"White\"],\n",
+    "    \"seismic_5\": [\"White\", \"White\", \"Black\", \"Black\", \"White\"],\n",
+    "    \"Set1\": [\"White\", \"White\", \"White\", \"White\", \"White\"],\n",
+    "    \"Set1_5\": [\"White\", \"White\", \"White\", \"White\", \"White\"],\n",
+    "    \"Set2\": [\"White\", \"White\", \"White\", \"White\", \"White\"],\n",
+    "    \"Set2_5\": [\"White\", \"White\", \"White\", \"White\", \"White\"],\n",
+    "    \"jet\": [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
+    "    \"jet_5\": [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
+    "    \"rainbow\": [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
+    "    \"rainbow_5\": [\"White\", \"Black\", \"Black\", \"White\", \"White\"],\n",
+    "}"
    ]
   },
   {
@@ -332,45 +354,49 @@
     "    if k[-2:] == \"_5\":\n",
     "        header = list(h5)\n",
     "        end_block = end_5\n",
-    "        h1 = f\"'' Theme for MODA and CHADA diagrams, based on five colors from the {k}\\n\"\n",
+    "        h1 = (\n",
+    "            f\"'' Theme for MODA and CHADA diagrams, based on five colors from the {k}\\n\"\n",
+    "        )\n",
     "    else:\n",
     "        header = list(h4)\n",
     "        end_block = end\n",
-    "        h1 = f\"'' Theme for MODA and CHADA diagrams, based on four colors from the {k}\\n\"\n",
+    "        h1 = (\n",
+    "            f\"'' Theme for MODA and CHADA diagrams, based on four colors from the {k}\\n\"\n",
+    "        )\n",
     "\n",
     "    header[1] = h1\n",
     "\n",
     "    if k[:4] in [\"viri\", \"plas\", \"civi\"]:\n",
     "        header = header[:-1] + hpu\n",
     "\n",
+    "    def_block = [\n",
+    "        f'!$PUML_THEME = \"MOCHADA-{k}\"\\n',\n",
+    "        f'!$THEME      = \"MOCHADA-{k}\"\\n',\n",
+    "        \"!$OVERVIEW_BACKGROUNDCOLOR = Gray\\n\",\n",
+    "        \"!$OVERVIEW_FONTCOLOR = White\\n\",\n",
+    "        f'!$USER_CASE_BACKGROUNDCOLOR = \"{v[0]}\"\\n',\n",
+    "        f\"!$USER_CASE_FONTCOLOR = {font_colors[k][0]}\\n\",\n",
+    "        f'!$EXPERIMENT_BACKGROUNDCOLOR = \"{v[1]}\"\\n',\n",
+    "        f\"!$EXPERIMENT_FONTCOLOR = {font_colors[k][1]}\\n\",\n",
+    "        f'!$RAW_DATA_BACKGROUNDCOLOR = \"{v[2]}\"\\n',\n",
+    "        f\"!$RAW_DATA_FONTCOLOR = {font_colors[k][2]}\\n\",\n",
+    "        f'!$DATA_PROCESSING_BACKGROUNDCOLOR = \"{v[3]}\"\\n',\n",
+    "        f\"!$DATA_PROCESSING_FONTCOLOR = {font_colors[k][3]}\\n\",\n",
+    "        f'!$USER_CASE_INPUT_BACKGROUNDCOLOR = \"{v[0]}\"\\n',\n",
+    "        f\"!$USER_CASE_INPUT_FONTCOLOR = {font_colors[k][0]}\\n\",\n",
+    "        f'!$MODEL_BACKGROUNDCOLOR = \"{v[1]}\"\\n',\n",
+    "        f\"!$MODEL_FONTCOLOR = {font_colors[k][1]}\\n\",\n",
+    "        f'!$RAW_OUTPUT_BACKGROUNDCOLOR = \"{v[2]}\"\\n',\n",
+    "        f\"!$RAW_OUTPUT_FONTCOLOR = {font_colors[k][2]}\\n\",\n",
+    "        f'!$PROCESSED_OUTPUT_BACKGROUNDCOLOR = \"{v[3]}\"\\n',\n",
+    "        f\"!$PROCESSED_OUTPUT_FONTCOLOR = {font_colors[k][3]}\\n\",\n",
+    "        f'!$DATA_BASED_MODEL_BACKGROUNDCOLOR = \"{v[4]}-{v[1]}\"\\n',\n",
+    "        f\"!$DATA_BASED_MODEL_FONTCOLOR = {font_colors[k][0]}\\n\",\n",
+    "        f'!$FINAL_DATA_BACKGROUNDCOLOR = \"{v[4]}\"\\n',\n",
+    "        f\"!$FINAL_DATA_FONTCOLOR = {font_colors[k][4]}\\n\",\n",
+    "    ]\n",
     "\n",
-    "    def_block = [f'!$PUML_THEME = \"MOCHADA-{k}\"\\n',\n",
-    "                 f'!$THEME      = \"MOCHADA-{k}\"\\n',\n",
-    "                 '!$OVERVIEW_BACKGROUNDCOLOR = Gray\\n',\n",
-    "                 '!$OVERVIEW_FONTCOLOR = White\\n',\n",
-    "                 f'!$USER_CASE_BACKGROUNDCOLOR = \"{v[0]}\"\\n',\n",
-    "                 f'!$USER_CASE_FONTCOLOR = {font_colors[k][0]}\\n',\n",
-    "                 f'!$EXPERIMENT_BACKGROUNDCOLOR = \"{v[1]}\"\\n',\n",
-    "                 f'!$EXPERIMENT_FONTCOLOR = {font_colors[k][1]}\\n',\n",
-    "                 f'!$RAW_DATA_BACKGROUNDCOLOR = \"{v[2]}\"\\n',\n",
-    "                 f'!$RAW_DATA_FONTCOLOR = {font_colors[k][2]}\\n',\n",
-    "                 f'!$DATA_PROCESSING_BACKGROUNDCOLOR = \"{v[3]}\"\\n',\n",
-    "                 f'!$DATA_PROCESSING_FONTCOLOR = {font_colors[k][3]}\\n',\n",
-    "                 f'!$USER_CASE_INPUT_BACKGROUNDCOLOR = \"{v[0]}\"\\n',\n",
-    "                 f'!$USER_CASE_INPUT_FONTCOLOR = {font_colors[k][0]}\\n',\n",
-    "                 f'!$MODEL_BACKGROUNDCOLOR = \"{v[1]}\"\\n',\n",
-    "                 f'!$MODEL_FONTCOLOR = {font_colors[k][1]}\\n',\n",
-    "                 f'!$RAW_OUTPUT_BACKGROUNDCOLOR = \"{v[2]}\"\\n',\n",
-    "                 f'!$RAW_OUTPUT_FONTCOLOR = {font_colors[k][2]}\\n',\n",
-    "                 f'!$PROCESSED_OUTPUT_BACKGROUNDCOLOR = \"{v[3]}\"\\n',\n",
-    "                 f'!$PROCESSED_OUTPUT_FONTCOLOR = {font_colors[k][3]}\\n',\n",
-    "                 f'!$DATA_BASED_MODEL_BACKGROUNDCOLOR = \"{v[4]}-{v[1]}\"\\n',\n",
-    "                 f'!$DATA_BASED_MODEL_FONTCOLOR = {font_colors[k][0]}\\n',\n",
-    "                 f'!$FINAL_DATA_BACKGROUNDCOLOR = \"{v[4]}\"\\n',\n",
-    "                 f'!$FINAL_DATA_FONTCOLOR = {font_colors[k][4]}\\n'\n",
-    "                 ]\n",
-    "\n",
-    "    theme_str = ''.join(header + mid + def_block + end_block)\n",
+    "    theme_str = \"\".join(header + mid + def_block + end_block)\n",
     "\n",
     "    with open(pathlib.Path(f\"../themes/puml-theme-MOCHADA-{k}.puml\"), \"w\") as f:\n",
     "        f.write(theme_str)"
