--- a/examples/json_diagram_from_hdf5_metadata.ipynb
+++ b/examples/json_diagram_from_hdf5_metadata.ipynb
@@ -111,11 +111,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmt.write_puml_code_for_hdf5_metadata(pathlib.Path(r\"../data/ebsd_header.h5oina\"), \n",
-    "                                      \"1/EBSD/Header\", \n",
-    "                                      pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_1_no_HL\"),\n",
-    "                                      save_json_and_load=False\n",
-    "                                     )"
+    "hmt.write_puml_code_for_hdf5_metadata(\n",
+    "    pathlib.Path(r\"../data/ebsd_header.h5oina\"),\n",
+    "    \"1/EBSD/Header\",\n",
+    "    pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_1_no_HL\"),\n",
+    "    save_json_and_load=False,\n",
+    ")"
    ]
   },
   {
@@ -133,7 +134,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mr.run_plantuml_code(pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_1_no_HL.puml\"), output_dir=pathlib.Path(\"../\"))"
+    "mr.run_plantuml_code(\n",
+    "    pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_1_no_HL.puml\"),\n",
+    "    output_dir=pathlib.Path(\"../\"),\n",
+    ")"
    ]
   },
   {
@@ -165,9 +169,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "highlights_default=[\"1/EBSD/Header/Phases/1/Lattice Dimensions\",\n",
-    "                    \"1/EBSD/Header/Phases/1/Phase Name\"\n",
-    "                   ]"
+    "highlights_default = [\n",
+    "    \"1/EBSD/Header/Phases/1/Lattice Dimensions\",\n",
+    "    \"1/EBSD/Header/Phases/1/Phase Name\",\n",
+    "]"
    ]
   },
   {
@@ -185,12 +190,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmt.write_puml_code_for_hdf5_metadata(pathlib.Path(r\"../data/ebsd_header.h5oina\"), \n",
-    "                                      \"1/EBSD/Header\", \n",
-    "                                      pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_2_default_HL\"),\n",
-    "                                      save_json_and_load=False,\n",
-    "                                      highlights=highlights_default\n",
-    "                                     )"
+    "hmt.write_puml_code_for_hdf5_metadata(\n",
+    "    pathlib.Path(r\"../data/ebsd_header.h5oina\"),\n",
+    "    \"1/EBSD/Header\",\n",
+    "    pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_2_default_HL\"),\n",
+    "    save_json_and_load=False,\n",
+    "    highlights=highlights_default,\n",
+    ")"
    ]
   },
   {
@@ -208,7 +214,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mr.run_plantuml_code(pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_2_default_HL.puml\"), output_dir=pathlib.Path(\"../\"))"
+    "mr.run_plantuml_code(\n",
+    "    pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_2_default_HL.puml\"),\n",
+    "    output_dir=pathlib.Path(\"../\"),\n",
+    ")"
    ]
   },
   {
@@ -253,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_highlight_style=\"\"\"<style>\n",
+    "my_highlight_style = \"\"\"<style>\n",
     "  .h1 {\n",
     "    BackGroundColor green\n",
     "    FontColor white\n",
@@ -286,10 +295,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "highlights_bespoke = {\"1/EBSD/Header/Phases/1/Lattice Dimensions\" : \"<<h1>>\",\n",
-    "                      \"1/EBSD/Header/Phases/1/Phase Name\" : \"<<h2>>\",\n",
-    "                      \"1/EBSD/Header/Phases/1/Color\" : \"\"\n",
-    "                     }"
+    "highlights_bespoke = {\n",
+    "    \"1/EBSD/Header/Phases/1/Lattice Dimensions\": \"<<h1>>\",\n",
+    "    \"1/EBSD/Header/Phases/1/Phase Name\": \"<<h2>>\",\n",
+    "    \"1/EBSD/Header/Phases/1/Color\": \"\",\n",
+    "}"
    ]
   },
   {
@@ -309,13 +319,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmt.write_puml_code_for_hdf5_metadata(pathlib.Path(r\"../data/ebsd_header.h5oina\"), \n",
-    "                                      \"1/EBSD/Header\", \n",
-    "                                      pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_3_bespoke_HL\"),\n",
-    "                                      save_json_and_load=False,\n",
-    "                                      highlights=highlights_bespoke,\n",
-    "                                      highlight_style=my_highlight_style\n",
-    "                                     )"
+    "hmt.write_puml_code_for_hdf5_metadata(\n",
+    "    pathlib.Path(r\"../data/ebsd_header.h5oina\"),\n",
+    "    \"1/EBSD/Header\",\n",
+    "    pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_3_bespoke_HL\"),\n",
+    "    save_json_and_load=False,\n",
+    "    highlights=highlights_bespoke,\n",
+    "    highlight_style=my_highlight_style,\n",
+    ")"
    ]
   },
   {
@@ -333,7 +344,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mr.run_plantuml_code(pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_3_bespoke_HL.puml\"), output_dir=pathlib.Path(\"../\"))"
+    "mr.run_plantuml_code(\n",
+    "    pathlib.Path(r\"../gallery/puml_code/hdf5_metadata_json_3_bespoke_HL.puml\"),\n",
+    "    output_dir=pathlib.Path(\"../\"),\n",
+    ")"
    ]
   },
   {
