--- a/examples/make_CHADA_tables_from_json_or_yaml.ipynb
+++ b/examples/make_CHADA_tables_from_json_or_yaml.ipynb
@@ -55,8 +55,8 @@
    "source": [
     "import pathlib\n",
     "\n",
-    "import mochada_kit.tables as mt\n",
-    "import mochada_kit.running as mr"
+    "import mochada_kit.running as mr\n",
+    "import mochada_kit.tables as mt"
    ]
   },
   {
@@ -143,11 +143,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = pathlib.Path(\"../templates/chada_tables_template_tips.json\") # path to the json/yaml relative to the current working directory\n",
+    "data_path = pathlib.Path(\n",
+    "    \"../templates/chada_tables_template_tips.json\"\n",
+    ")  # path to the json/yaml relative to the current working directory\n",
     "\n",
-    "out_path = pathlib.Path(\"../gallery/puml_code\") # path to the folder where the output puml code is stored (relative to the parent folder of data_path)\n",
+    "out_path = pathlib.Path(\n",
+    "    \"../gallery/puml_code\"\n",
+    ")  # path to the folder where the output puml code is stored (relative to the parent folder of data_path)\n",
     "\n",
-    "load_path = pathlib.Path(\"../../templates/chada_tables_template_tips.json\") # relative path from out_path to data_path"
+    "load_path = pathlib.Path(\n",
+    "    \"../../templates/chada_tables_template_tips.json\"\n",
+    ")  # relative path from out_path to data_path"
    ]
   },
   {
@@ -203,7 +209,13 @@
    "source": [
     "# writes code for a single diagram showing all 5 tables joined to a contents element\n",
     "\n",
-    "mt.write_chada_tables_whole_plantuml(data_path, out_path=out_path, load_path=load_path, out_name=out_name, theme_name=\"plasma_wide\")"
+    "mt.write_chada_tables_whole_plantuml(\n",
+    "    data_path,\n",
+    "    out_path=out_path,\n",
+    "    load_path=load_path,\n",
+    "    out_name=out_name,\n",
+    "    theme_name=\"plasma_wide\",\n",
+    ")"
    ]
   },
   {
@@ -231,12 +243,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_base = mt.handle_paths(data_path,\n",
-    "                           out_path=out_path,\n",
-    "                           load_path=load_path,\n",
-    "                           out_name=out_name,\n",
-    "                           return_out_base_only=True\n",
-    "                           )"
+    "out_base = mt.handle_paths(\n",
+    "    data_path,\n",
+    "    out_path=out_path,\n",
+    "    load_path=load_path,\n",
+    "    out_name=out_name,\n",
+    "    return_out_base_only=True,\n",
+    ")"
    ]
   },
   {
@@ -254,7 +267,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mr.run_plantuml_code(pathlib.Path(str(out_base) + \".puml\"), output_dir=pathlib.Path(\"../\"))"
+    "mr.run_plantuml_code(\n",
+    "    pathlib.Path(str(out_base) + \".puml\"), output_dir=pathlib.Path(\"../\")\n",
+    ")"
    ]
   },
   {
@@ -312,7 +327,9 @@
    "source": [
     "# writes code for 5 different diagrams with hyperlinks on a contents element\n",
     "\n",
-    "mt.write_chada_tables_plantuml(data_path, out_path=out_path, load_path=load_path, out_name=out_name_2)"
+    "mt.write_chada_tables_plantuml(\n",
+    "    data_path, out_path=out_path, load_path=load_path, out_name=out_name_2\n",
+    ")"
    ]
   },
   {
@@ -322,12 +339,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_base_2 = mt.handle_paths(data_path,\n",
-    "                             out_path=out_path,\n",
-    "                             load_path=load_path,\n",
-    "                             out_name=out_name_2,\n",
-    "                             return_out_base_only=True\n",
-    "                             )"
+    "out_base_2 = mt.handle_paths(\n",
+    "    data_path,\n",
+    "    out_path=out_path,\n",
+    "    load_path=load_path,\n",
+    "    out_name=out_name_2,\n",
+    "    return_out_base_only=True,\n",
+    ")"
    ]
   },
   {
@@ -346,7 +364,9 @@
    "outputs": [],
    "source": [
     "for i in [\"overview\", \"user_case\", \"experiment\", \"raw_data\", \"data_processing\"]:\n",
-    "    mr.run_plantuml_code(pathlib.Path(str(out_base_2) + f\"_{i}.puml\"), output_dir=pathlib.Path(\"../\"))"
+    "    mr.run_plantuml_code(\n",
+    "        pathlib.Path(str(out_base_2) + f\"_{i}.puml\"), output_dir=pathlib.Path(\"../\")\n",
+    "    )"
    ]
   },
   {
@@ -404,7 +424,13 @@
    "source": [
     "# writes code for 5 diagrams each showing a single table without a contents element (useful to paste into a document etc.)\n",
     "\n",
-    "mt.write_chada_tables_single_plantuml(data_path, out_path=out_path, load_path=load_path, out_name=out_name_3, theme_name=\"plasma_A4w\")"
+    "mt.write_chada_tables_single_plantuml(\n",
+    "    data_path,\n",
+    "    out_path=out_path,\n",
+    "    load_path=load_path,\n",
+    "    out_name=out_name_3,\n",
+    "    theme_name=\"plasma_A4w\",\n",
+    ")"
    ]
   },
   {
@@ -414,12 +440,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_base_3 = mt.handle_paths(data_path,\n",
-    "                             out_path=out_path,\n",
-    "                             load_path=load_path,\n",
-    "                             out_name=out_name_3,\n",
-    "                             return_out_base_only=True\n",
-    "                             )"
+    "out_base_3 = mt.handle_paths(\n",
+    "    data_path,\n",
+    "    out_path=out_path,\n",
+    "    load_path=load_path,\n",
+    "    out_name=out_name_3,\n",
+    "    return_out_base_only=True,\n",
+    ")"
    ]
   },
   {
@@ -430,7 +457,9 @@
    "outputs": [],
    "source": [
     "for i in [\"overview\", \"user_case\", \"experiment\", \"raw_data\", \"data_processing\"]:\n",
-    "    mr.run_plantuml_code(pathlib.Path(str(out_base_3) + f\"_{i}.puml\"), output_dir=pathlib.Path(\"../\"))"
+    "    mr.run_plantuml_code(\n",
+    "        pathlib.Path(str(out_base_3) + f\"_{i}.puml\"), output_dir=pathlib.Path(\"../\")\n",
+    "    )"
    ]
   },
   {
@@ -517,8 +546,7 @@
     "@endjson\n",
     "\"\"\"\n",
     "\n",
-    "_ = pathlib.Path(\"../gallery/puml_code/demo_formatting.puml\").write_text(puml_code)\n",
-    "    "
+    "_ = pathlib.Path(\"../gallery/puml_code/demo_formatting.puml\").write_text(puml_code)"
    ]
   },
   {
@@ -528,7 +556,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mr.run_plantuml_code(\"../gallery/puml_code/demo_formatting.puml\", output_dir=pathlib.Path(\"../\"))"
+    "mr.run_plantuml_code(\n",
+    "    \"../gallery/puml_code/demo_formatting.puml\", output_dir=pathlib.Path(\"../\")\n",
+    ")"
    ]
   },
   {
