--- a/examples/make_workflow_diagram.ipynb
+++ b/examples/make_workflow_diagram.ipynb
@@ -266,7 +266,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mr.run_plantuml_code(pathlib.Path(\"../gallery/puml_code/legend_chada_plasma_theme.puml\"), output_dir=pathlib.Path(\"../\"))"
+    "mr.run_plantuml_code(\n",
+    "    pathlib.Path(\"../gallery/puml_code/legend_chada_plasma_theme.puml\"),\n",
+    "    output_dir=pathlib.Path(\"../\"),\n",
+    ")"
    ]
   },
   {
@@ -361,7 +364,9 @@
     "@enduml\n",
     "\"\"\"\n",
     "\n",
-    "with pathlib.Path(\"../gallery/puml_code/legend_chada_plasma_theme_with_groups.puml\") as f:\n",
+    "with pathlib.Path(\n",
+    "    \"../gallery/puml_code/legend_chada_plasma_theme_with_groups.puml\"\n",
+    ") as f:\n",
     "    f.write_text(puml_code)"
    ]
   },
@@ -372,7 +377,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mr.run_plantuml_code(pathlib.Path(\"../gallery/puml_code/legend_chada_plasma_theme_with_groups.puml\"), output_dir=pathlib.Path(\"../\"))"
+    "mr.run_plantuml_code(\n",
+    "    pathlib.Path(\"../gallery/puml_code/legend_chada_plasma_theme_with_groups.puml\"),\n",
+    "    output_dir=pathlib.Path(\"../\"),\n",
+    ")"
    ]
   },
   {
