--- a/examples/using_hyperlinks_in_workflow_digarams.ipynb
+++ b/examples/using_hyperlinks_in_workflow_digarams.ipynb
@@ -129,7 +129,9 @@
     "@enduml\n",
     "\"\"\"\n",
     "\n",
-    "with pathlib.Path(\"../gallery/puml_code/chada_workflow_SEM_EBSD_EDX_nested_techniques.puml\") as f:\n",
+    "with pathlib.Path(\n",
+    "    \"../gallery/puml_code/chada_workflow_SEM_EBSD_EDX_nested_techniques.puml\"\n",
+    ") as f:\n",
     "    f.write_text(puml_code)"
    ]
   },
@@ -140,7 +142,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mr.run_plantuml_code(pathlib.Path(\"../gallery/puml_code/chada_workflow_SEM_EBSD_EDX_nested_techniques.puml\"), output_dir=pathlib.Path(\"../\"))"
+    "mr.run_plantuml_code(\n",
+    "    pathlib.Path(\n",
+    "        \"../gallery/puml_code/chada_workflow_SEM_EBSD_EDX_nested_techniques.puml\"\n",
+    "    ),\n",
+    "    output_dir=pathlib.Path(\"../\"),\n",
+    ")"
    ]
   },
   {
@@ -158,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import SVG, HTML, display, display_html"
+    "from IPython.display import SVG, display"
    ]
   },
   {
@@ -305,7 +312,9 @@
     "@enduml\n",
     "\"\"\"\n",
     "\n",
-    "with pathlib.Path(\"../gallery/puml_code/chada_workflow_SEM_EBSD_EDX_nested_techniques_with_hyperlinks.puml\") as f:\n",
+    "with pathlib.Path(\n",
+    "    \"../gallery/puml_code/chada_workflow_SEM_EBSD_EDX_nested_techniques_with_hyperlinks.puml\"\n",
+    ") as f:\n",
     "    f.write_text(puml_code)"
    ]
   },
@@ -316,7 +325,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mr.run_plantuml_code(pathlib.Path(\"../gallery/puml_code/chada_workflow_SEM_EBSD_EDX_nested_techniques_with_hyperlinks.puml\"), output_dir=pathlib.Path(\"../\"))"
+    "mr.run_plantuml_code(\n",
+    "    pathlib.Path(\n",
+    "        \"../gallery/puml_code/chada_workflow_SEM_EBSD_EDX_nested_techniques_with_hyperlinks.puml\"\n",
+    "    ),\n",
+    "    output_dir=pathlib.Path(\"../\"),\n",
+    ")"
    ]
   },
   {
@@ -339,7 +353,11 @@
     }
    ],
    "source": [
-    "display(SVG(filename=\"../gallery/chada_workflow_SEM_EBSD_EDX_nested_techniques_with_hyperlinks.svg\"))"
+    "display(\n",
+    "    SVG(\n",
+    "        filename=\"../gallery/chada_workflow_SEM_EBSD_EDX_nested_techniques_with_hyperlinks.svg\"\n",
+    "    )\n",
+    ")"
    ]
   },
   {
