--- a/examples/CHADA_and_MODA_legend_all_themes.ipynb
+++ b/examples/CHADA_and_MODA_legend_all_themes.ipynb
@@ -23,6 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import contextlib\n",
     "import glob\n",
     "import pathlib\n",
     "\n",
@@ -70,10 +71,8 @@
     "themes.remove(\"MOCHADA-CWA\")\n",
     "themes.insert(0, \"MOCHADA-CWA\")\n",
     "for i in [\"MOCHADA-plasma_A4w\", \"MOCHADA-plasma_wide\"]:\n",
-    "    try:\n",
-    "        themes.remove(i)\n",
-    "    except ValueError:\n",
-    "        pass"
+    "    with contextlib.suppress(ValueError):\n",
+    "        themes.remove(i)"
    ]
   },
   {
@@ -93,13 +92,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(pathlib.Path(\"../gallery/puml_code/legend_moda_and_chada_all_themes.puml\"), \"w\") as f:\n",
+    "with open(\n",
+    "    pathlib.Path(\"../gallery/puml_code/legend_moda_and_chada_all_themes.puml\"), \"w\"\n",
+    ") as f:\n",
     "    f.write(\"@startuml\\n\")\n",
     "\n",
     "    for i, j in enumerate(themes):\n",
     "        f.write(f\"label l{i+1} [\\n\")\n",
     "        f.write(\"{{\\n\")\n",
-    "        chada_blocks_uml  = f\"\"\"!theme {j} from ../../themes\n",
+    "        chada_blocks_uml = f\"\"\"!theme {j} from ../../themes\n",
     "title {j}\n",
     "group CHADA <<group_chada>>\n",
     "  :User Case; <<user_case>>\n",
@@ -143,8 +144,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mr.run_plantuml_code(pathlib.Path(\"../gallery/puml_code/legend_moda_and_chada_all_themes.puml\"),\n",
-    "                     output_dir=pathlib.Path(\"../\"))"
+    "mr.run_plantuml_code(\n",
+    "    pathlib.Path(\"../gallery/puml_code/legend_moda_and_chada_all_themes.puml\"),\n",
+    "    output_dir=pathlib.Path(\"../\"),\n",
+    ")"
    ]
   },
   {
