fix(examples): stop using pathlib.Path as a context manager

--- a/examples/make_workflow_diagram.ipynb
+++ b/examples/make_workflow_diagram.ipynb
@@ -96,14 +96,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:/Work/Projects/MaMMoS/CHADA_MODA/mochada_kit/themes\n"
+      "/home/swapneel/Projects/Forks/mochada_kit/src/themes\n"
      ]
     }
    ],
    "source": [
     "import mochada_kit as mk\n",
     "\n",
-    "print(mk.__THEMES_DIR__)"
+    "print(mk._THEMES_DIR)"
    ]
   },
   {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "0a46a778-e92c-438f-b762-5a4b1ae47f12",
    "metadata": {},
    "outputs": [],
@@ -237,8 +237,10 @@
     "@enduml\n",
     "\"\"\"\n",
     "\n",
-    "with pathlib.Path(\"../gallery/puml_code/legend_chada_plasma_theme.puml\") as f:\n",
-    "    f.write_text(puml_code)"
+    "out_file_path = pathlib.Path(\"../gallery/puml_code/legend_chada_plasma_theme.puml\")\n",
+    "\n",
+    "with open(out_file_path, \"w\") as handle:\n",
+    "    handle.write(puml_code)"
    ]
   },
   {
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "8494d4b2-faf2-42d9-aa5d-b9b5d57e3730",
    "metadata": {},
    "outputs": [],
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "e4cb8086-790f-4c44-b146-73cb3c00ce72",
    "metadata": {},
    "outputs": [],
@@ -334,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "ae0c3c7f-b508-455e-ae3a-d8344b05828d",
    "metadata": {},
    "outputs": [],
@@ -364,15 +366,17 @@
     "@enduml\n",
     "\"\"\"\n",
     "\n",
-    "with pathlib.Path(\n",
+    "out_file_path = pathlib.Path(\n",
     "    \"../gallery/puml_code/legend_chada_plasma_theme_with_groups.puml\"\n",
-    ") as f:\n",
-    "    f.write_text(puml_code)"
+    ")\n",
+    "\n",
+    "with open(out_file_path, \"w\") as handle:\n",
+    "    handle.write(puml_code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "0cfc2899-4804-487c-ac76-841b3d6eeb88",
    "metadata": {},
    "outputs": [],
@@ -412,14 +416,6 @@
     "- Please check out the other diagrams in `mochada_kit/gallery` with accompanying plantuml code in `mochada_kit/gallery/puml_code`\n",
     "- There is a separate jupyter notebook on using hyperlinks in CHADA and MODA workflow diagrams `mochada_kit/examples/using_hyperlinks_in_workflow_digarams.ipynb`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ff57a1b-2c8a-4fea-b1ec-7ac68de00697",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -438,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
