--- a/examples/using_hyperlinks_in_workflow_digarams.ipynb
+++ b/examples/using_hyperlinks_in_workflow_digarams.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4caed0d6-0ea1-4c3c-b4f7-0cb415fe11ed",
    "metadata": {},
    "outputs": [],
@@ -129,15 +129,17 @@
     "@enduml\n",
     "\"\"\"\n",
     "\n",
-    "with pathlib.Path(\n",
+    "out_file = pathlib.Path(\n",
     "    \"../gallery/puml_code/chada_workflow_SEM_EBSD_EDX_nested_techniques.puml\"\n",
-    ") as f:\n",
-    "    f.write_text(puml_code)"
+    ")\n",
+    "\n",
+    "with open(out_file, \"w\") as handle:\n",
+    "    handle.write(puml_code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fbb7ec6e-ea9b-4b0f-8715-3f5f3b401093",
    "metadata": {},
    "outputs": [],
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d1a4421d-663b-4f54-b8b0-ef05b4a36eca",
    "metadata": {},
    "outputs": [],
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ccff96df-85ce-418a-b78e-f0a7840296a8",
    "metadata": {},
    "outputs": [
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6805b74a-040f-4864-9e58-66fd22446d71",
    "metadata": {},
    "outputs": [],
@@ -312,15 +314,17 @@
     "@enduml\n",
     "\"\"\"\n",
     "\n",
-    "with pathlib.Path(\n",
+    "out_file = pathlib.Path(\n",
     "    \"../gallery/puml_code/chada_workflow_SEM_EBSD_EDX_nested_techniques_with_hyperlinks.puml\"\n",
-    ") as f:\n",
-    "    f.write_text(puml_code)"
+    ")\n",
+    "\n",
+    "with open(out_file, \"w\") as handle:\n",
+    "    handle.write(puml_code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6bbe0034-f385-409a-a4ea-2ebc9d1e695e",
    "metadata": {},
    "outputs": [],
@@ -335,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "98587c13-2284-4dfc-b02f-2c17b3ae7c72",
    "metadata": {},
    "outputs": [
@@ -371,14 +375,6 @@
     "- you should see that clicking the element `Acquire electron images` takes you to a json diagram showing the metadata with highlights, and that clicking the name of the single technique group `EBSD` takes you to a json diagram showing the CHADA tables for EBSD\n",
     "- the links open in the same tab with these settings, but this behaviour can be changed, see [here](https://plantuml.com/link)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6d6f37a-e9d0-48a9-ad63-4909ddcdd016",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -397,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
