fix(docs): Specify java format

--- a/docs/examples/make_workflow_diagram.ipynb
+++ b/docs/examples/make_workflow_diagram.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "For example, this code:\n",
     "\n",
-    "```\n",
+    "```java\n",
     "@startuml\n",
     ":activity 1;\n",
     ":activity 2;\n",
@@ -75,7 +75,7 @@
     "\n",
     "In `mochada_kit` bespoke themes for CHADA and MODA diagrams have been developed and are located in the directory `mochada_kit/themes`. To apply a theme to a plantuml diagram we need to add a line to the code above giving the name of the theme to be applied and the location of the folder where the themes reside. For example, to apply the theme `MOCHADA-CWA`, we  write:\n",
     "\n",
-    "```\n",
+    "```java\n",
     "@startuml\n",
     "!theme MOCHADA-CWA from ../../themes\n",
     ":activity 1;\n",
@@ -169,7 +169,7 @@
    "source": [
     "Once we have added the line telling plantuml to use a particular theme, we only have to apply a stereotype to each element to change its appearance:\n",
     "\n",
-    "```\n",
+    "```java\n",
     "@startuml\n",
     "!theme MOCHADA-CWA from ../../themes\n",
     ":activity 1; <<user_case>>\n",
@@ -197,7 +197,7 @@
    "source": [
     "If we want to make a workflow diagram just showing one of each type of CHADA element and using the MOCHADA-plasma theme (*e.g.* to use as a legend), the code would look like this:\n",
     "\n",
-    "```\n",
+    "```java\n",
     "@startuml\n",
     "!theme MOCHADA-plasma from ../../themes\n",
     ":User Case; <<user_case>>\n",
@@ -310,7 +310,7 @@
     "\n",
     "An example of this would be:\n",
     "\n",
-    "```\n",
+    "```java\n",
     "@startuml\n",
     "!theme MOCHADA-plasma from ../../themes\n",
     ":User Case; <<user_case>>\n",
