fix(docs): Change python code to acceptable format

--- a/docs/examples/make_workflow_diagram.ipynb
+++ b/docs/examples/make_workflow_diagram.ipynb
@@ -98,8 +98,10 @@
     "If you want to store your puml code somewhere else, you may want to put the absolute path to the `mochada_kit/themes` folder. This can be easily obtained by importing `mochada_kit` and printing the `_THEMES_DIR` constant. Whichever operating system you are using, this is already formatted as a posix path (with forward slashes), which is required by plantuml *e.g.*:\n",
     "\n",
     "```python\n",
-    ">>> import mochada_kit as mk\n",
-    ">>> print(mk._THEMES_DIR)\n",
+    "import mochada_kit as mk\n",
+    "print(mk._THEMES_DIR)\n",
+    "```\n",
+    "```bash\n",
     "D:/folder1/folder2/mochada_kit/themes\n",
     "```\n",
     "\n",
